--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Title</title>
-    </head>
-    <body>
-        Hello
-    </body>
+<html>
+<head>
+    <title>Drone World</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="/static/js/jquery-1.11.1.min.js"></script>
+    <link rel="stylesheet" href="/static/css/jquery.mobile-1.4.5.min.css" />
+    <script src="/static/js/jquery.mobile-1.4.5.min.js"></script>
+</head>
+<body>
+<div data-role="page">
+    <div data-role="header" >
+        <a href="/" data-icon="home" data-dom-cache="false">Home</a>
+        <h1>Drone World</h1>
+    </div>
+
+    <div data-role="content">
+        <div align="center">
+            <h1>Drone World</h1>
+            <img width="100%" src="/static/img/drone.png">
+        </div>
+
+        <ul data-role="listview">
+            <li><a href="/controller/">Controller</a></li>
+            <li><a href="/games/shake/">Shake Game</a></li>
+        </ul>
+
+    </div>
+</div>
+</body>
 </html>
