--- a/app/views/controller.html
+++ b/app/views/controller.html
@@ -9,7 +9,14 @@
 
 <script>
     function sendCommand(command, params={}){
-        //TODO
+        params['command'] = command
+        $.post("/api/command/", params)
+        .done(function(json){
+            console.log({action: 'sendCommand', params: params, json: json, status: 'success'})
+        }, 'json')
+        .fail(function(json){
+            console.log({action: 'sendCommand', params: params, json: json, status: 'fail'})
+        }, 'json')
     }
 </script>
 
