--- a/app/views/controller.html
+++ b/app/views/controller.html
@@ -98,4 +98,13 @@
     </div>
 </div>
 
+
+<div class="controller-box">
+    <h3>Tello EDU | Tello</h3>
+    <div data-role="controlgroup" data-type="horizontal">
+        <a href="#" data-role="button" data-inline="true" onclick="sendCommand('bounce'); return false;">Bounce Mode</a>
+        <a href="#" data-role="button" onclick="sendCommand('throwTakeOff'); return false;">Throw TakeOff</a>
+    </div>
+</div>
+
 {{ end }}
