--- a/app/views/controller.html
+++ b/app/views/controller.html
@@ -107,4 +107,12 @@
     </div>
 </div>
 
+<div class="controller-box">
+    <h3>ADVANCED MODE</h3>
+    <div data-role="controlgroup" data-type="horizontal">
+        <a href="#" data-role="button" data-inline="true" onclick="sendCommand('patrol'); return false;">Patrol</a>
+        <a href="#" data-role="button" data-inline="true" onclick="sendCommand('stopPatrol'); return false;">Stop Patrol</a>
+    </div>
+</div>
+
 {{ end }}
