--- a/app/views/controller.html
+++ b/app/views/controller.html
@@ -113,6 +113,8 @@
         <a href="#" data-role="button" data-inline="true" onclick="sendCommand('patrol'); return false;">Patrol</a>
         <a href="#" data-role="button" data-inline="true" onclick="sendCommand('stopPatrol'); return false;">Stop Patrol</a>
     </div>
+    <br>
+    <img src="/video/streaming">
 </div>
 
 {{ end }}
