--- a/app/views/controller.html
+++ b/app/views/controller.html
@@ -112,6 +112,8 @@
     <div data-role="controlgroup" data-type="horizontal">
         <a href="#" data-role="button" data-inline="true" onclick="sendCommand('patrol'); return false;">Patrol</a>
         <a href="#" data-role="button" data-inline="true" onclick="sendCommand('stopPatrol'); return false;">Stop Patrol</a>
+        <a href="#" data-role="button" data-inline="true" onclick="sendCommand('faceDetectTrack'); return false;">Face Track</a>
+        <a href="#" data-role="button" data-inline="true" onclick="sendCommand('stopFaceDetectTrack'); return false;">Stop Face Track</a>
     </div>
     <br>
     <img src="/video/streaming">
